--- a/css/estilospre.css
+++ b/css/estilospre.css
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 
-.buttom{
+/* .buttom{
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -37,16 +37,14 @@
     cursor: pointer;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
-.buttons{
+/* .buttons{
     display: flex;
     list-style: none;
     justify-content: center;
-    gap: 8px;
-    
-    
-}
+    gap: 8px;    
+} */
 
 .buttonn{
     width: max-content;
@@ -142,14 +140,14 @@
     
 } */
 
-.email-tel .svg-sobre-tel svg path{
+/* .email-tel .svg-sobre-tel svg path{
     fill: #757575;
     margin-right: 4px;
-}
+} */
 
-.email-tel svg path:hover{
+/* .email-tel svg path:hover{
     fill: #2196F3;
-}
+} */
 
 /* .header-email-tel{ 
     display: flex;
@@ -237,9 +235,9 @@
     color: #2196F3;
 } */
 
-                        /*   titulo  section 1 */
+                        /*   titulo  section banner */
 
-.banner .title-pal{
+/* .banner .title-pal{
     width: 696px;
     height: 120px;
     
@@ -254,9 +252,9 @@
     
     z-index: 5;
     color: #FFFFFF;
-}
+} */
 
-.banner{
+/* .banner{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -272,9 +270,9 @@
     background-repeat: no-repeat;
     background-position: cover;
     background-size: cover;
-}
+} */
 
-.banner .banner-overlay{
+/* .banner .banner-overlay{
     position: absolute;
     top: 0;
     left: 0;
@@ -282,9 +280,9 @@
     background-color: #2f303a52;
     height: 100%;
     width: 100%;
-}
+} */
 
-.banner-button{
+/* .banner-button{
     position: relative;
     display: flex;
     align-items: center;
@@ -296,14 +294,14 @@
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-}
+} */
 
-.banner-button .buttom:hover{
+/* .banner-button .buttom:hover{
     background: #2196F3;
     color: #FFFFFF;   
-}
+} */
                         /*   modal   */
-.backdrop{
+/* .backdrop{
     position: fixed;
     
     top: 0;
@@ -313,13 +311,13 @@
     background: rgba(0, 0, 0, 0.4);
     z-index: 10;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.is-hidden{
+/* .is__hidden{
     visibility: hidden;
-}
+} */
 
-.modal{
+/* .modal{
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -334,9 +332,9 @@
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-}
+} */
 
-.btn-modal{
+/* .btn-modal{
     box-sizing: border-box;
     border-radius: 50px;
     cursor: pointer;
@@ -345,27 +343,27 @@
     margin: 8px 8px 8px 480px;
     border-color:  #757575;
     background-color: #FFFFFF;
-}
+} */
 
-.icon-x {
+/* .icon-x {
     width: 12px;
     height: 12px;
     padding-top: 2px;
     fill: #000000;
-}
+} */
 
-.icon-x:hover{ 
+/* .icon-x:hover{ 
     fill: #2196F3;
-}    
+}     */
 
-.modal-form{ 
+/* .modal-form{ 
     display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.modal p{
+/* .modal p{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -375,9 +373,9 @@
     letter-spacing: 0.03em;
 
     color: #212121;
-}
+} */
 
-.label-name{
+/* .label-name{
     position: relative;
     display: flex;
     flex-direction: column;
@@ -392,9 +390,9 @@
     letter-spacing: 0.01em;
 
     color: #757575;
-}
+} */
 
-.input-modal{
+/* .input-modal{
     box-sizing: border-box;
     width: 448px;
     height: 40px;
@@ -404,12 +402,12 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
-}
+} */
 
-.label-name .input-modal:hover + .svg-name,
+/* .label-name .input-modal:hover + .svg-name,
 .label-name .input-modal:focus + .svg-name{
     fill: #2196F3;
-}
+} */
 
 /* .label-name .input-modal:hover + .input-modal,
 .label-name .input-modal:focus + .input-modal{
@@ -421,15 +419,15 @@
     border-color: #2196F3;
 }
 
-.svg-name{
+/* .svg-name{
     position: absolute;
     top: 36px;
     left: 15px;
     width: 12px;
     height: 12px;
-}
+} */
 
-.input-tex{
+/* .input-tex{
     width: 448px;
     height: 120px;
     margin-top: 4px;
@@ -438,12 +436,12 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
-}
+} */
 
-.input-tex:hover,
+/* .input-tex:hover,
 .input-tex:focus{
     border-color: #2196F3;
-}
+} */
 
 .container-group-check{
     position: relative;
