--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -85,7 +85,7 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is__hidden{
-    // visibility: hidden;
+    visibility: hidden;
 }
 .modal{
     position: absolute;
@@ -158,35 +158,121 @@
             height: 40px;
             padding-left: 40px;
             margin-top: 4px;
-            border: colors.$color_border;
-            border-radius: 4px;
+            // border: colors.$color_fill_grey;
+            // border-radius: 4px;
             outline: none;
             }
             .svg__name{
             position: absolute;
-            top: 36px;
+            top: 33px;
             left: 15px;
             width: 12px;
             height: 12px;
-
-                .input__tex{
-                width: 448px;
-                height: 120px;
-                margin-top: 4px;
-                box-sizing: border-box;
-                border: colors.$color_border;
-                border-radius: 4px;
-                outline: none;
-                }
+                
                 .input-tex:hover,
                 .input-tex:focus{
-                    border-color: colors.$color_hover;
+                border-color: colors.$color_hover;
                 }
             }
             .input__modal:hover + .svg__name,
             .input__modal:focus + .svg__name{
                 fill: colors.$color_hover;
             }
-        }   
-    }
+            .input__modal:hover,
+            .input__modal:focus{
+                border-color: colors.$color_hover;
+            }
+            .input__tex:hover{
+                border-color: colors.$color_hover;
+            }
+        }
+
+        &__check{
+        position: relative;
+        display: flex;
+        padding-left: 20px;
+        flex-direction: row;
+        width: 448px;
+        margin-top: 20px;
+
+            &__label{
+            position: relative;
+            width: 400px;
+            height: 40px; 
+            cursor: pointer;
+
+                .custom__check{
+                position: absolute;
+                border-color: colors.$color_fill_grey;
+                display: inline;
+
+                    &__svg{
+                    display: inline;
+                    position: absolute; 
+                    display: none;
+                    top: 1px;
+                    left: 6px;
+                    width: 13px;
+                    height: 12px;
+                    padding-top: 2px;
+                    border: solid colors.$color_hover;
+                    background: colors.$color_hover;
+                    fill: colors.$color_white;
+                    }
+                }
+                .custom__check:hover{
+                background: colors.$color_hover;
+                border: none;
+                }
+                &__text{
+                position: absolute;
+                left: 12px;
+                top: 10px;
+                margin-left: 5px;
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 24px;
+                letter-spacing: 0.03em;
+                color: colors.$color_fill_grey;
+                }
+                .input__check{
+                width: 50px;
+                }
+            }
+        } 
+        &__send{
+        width: 200px;
+        height: 50px;
+        margin-top: 12px;
+        background: colors.$color_white;
+        border-radius: 4px;
+        border-color: colors.$color_border2;
+        outline: none;
+        cursor: pointer;
+
+            .letter__send{
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 30px;
+            letter-spacing: 0.06em;
+            color: colors.$color_fill_black;
+            }
+            .letter__send:hover{
+                color: colors.$color_white;
+            }
+            
+        }
+
+        &__send:hover,
+        &__send:focus{
+        background-color: colors.$color_hover;
+        border-color: colors.$color_hover;
+        box-shadow: colors.$color_boxshadow_1;       
+        }  
+
+    } 
 }
