--- a/style.css
+++ b/style.css
@@ -1,3 +1,462 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+.box__body {
+  margin: 0 auto;
+  width: 1200px;
+  font-family: "roboto" "Raleway";
+  background: #E5E5E5;
+}
+
+.header {
+  height: 80px;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ECECEC;
+  background-color: #FFFFFF;
+}
+.header .container {
+  width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+.header__nav__link__webstudio {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  margin-left: 100px;
+  text-align: right;
+  letter-spacing: 0.03em;
+  color: #2196F3;
+}
+.header__nav__menu {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  list-style-type: none;
+}
+.header__nav__menu__link {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+  color: #212121;
+}
+.header__nav__menu__link:hover {
+  color: #2196F3;
+}
+
+.header__nav__menu {
+  position: relative;
+}
+.header__nav__menu__link::after {
+  position: absolute;
+  content: "";
+  width: 50px;
+  height: 4px;
+  left: 0;
+  top: 100%;
+  background: #2196F3;
+  border-radius: 2px;
+  margin-top: 29px;
+  opacity: 0;
+}
+.header__nav__menu__barra::after {
+  opacity: 1;
+}
+
+.header__contact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+  list-style-type: none;
+}
+.header__contact__email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.header__contact__email__letter {
+  width: 118px;
+  height: 16px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  text-decoration: none;
+}
+.header__contact__email__letter:hover {
+  color: #2196F3;
+}
+.header__contact__email .svg__mail {
+  fill: #757575;
+  margin-right: 4px;
+}
+.header__contact__email .svg__mail:hover {
+  fill: #2196F3;
+}
+.header__contact__tel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.header__contact__tel__letter {
+  width: 118px;
+  height: 16px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  text-decoration: none;
+}
+.header__contact__tel__letter:hover {
+  color: #2196F3;
+}
+.header__contact__tel .svg__tel {
+  fill: #757575;
+  margin-right: 4px;
+  cursor: pointer;
+}
+.header__contact__tel .svg__tel:hover {
+  fill: #2196F3;
+}
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 600px;
+  background: #2F303A;
+  background: url("../imagenes/imag-banner.jpg");
+  background-blend-mode: overlay;
+  position: relative;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: cover;
+  background-size: cover;
+}
+.banner__title {
+  width: 696px;
+  height: 120px;
+  font-family: "roboto";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  z-index: 5;
+}
+.banner__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(47, 48, 58, 0.3215686275);
+  height: 100%;
+  width: 100%;
+}
+.banner__button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
+  width: 261px;
+  height: 50px;
+  z-index: 6;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  gap: 8px;
+}
+.banner__button .buttom {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 0.06em;
+  margin: 0 auto;
+  width: 261px;
+  height: 50px;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.banner__button .buttom:hover {
+  background: #2196F3;
+  color: #FFFFFF;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is__hidden {
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 528px;
+  height: 581px;
+  left: 400px;
+  top: 1px;
+  bottom: 100px;
+  z-index: 11;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal__btn {
+  box-sizing: border-box;
+  border-radius: 50px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  margin: 8px 8px 8px 480px;
+  border-color: #757575;
+  background-color: #FFFFFF;
+}
+.modal__btn .icon-x {
+  width: 12px;
+  height: 12px;
+  padding-top: 2px;
+  fill: #000000;
+}
+.modal__btn .icon-x:hover {
+  fill: #2196F3;
+}
+.modal__title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.modal__form__name {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-top: 12px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+.modal__form__name .input__modal {
+  box-sizing: border-box;
+  width: 448px;
+  height: 40px;
+  padding-left: 40px;
+  margin-top: 4px;
+  outline: none;
+}
+.modal__form__name .svg__name {
+  position: absolute;
+  top: 33px;
+  left: 15px;
+  width: 12px;
+  height: 12px;
+}
+.modal__form__name .svg__name .input-tex:hover,
+.modal__form__name .svg__name .input-tex:focus {
+  border-color: #2196F3;
+}
+.modal__form__name .input__modal:hover + .svg__name,
+.modal__form__name .input__modal:focus + .svg__name {
+  fill: #2196F3;
+}
+.modal__form__name .input__modal:hover,
+.modal__form__name .input__modal:focus {
+  border-color: #2196F3;
+}
+.modal__form__name .input__tex:hover {
+  border-color: #2196F3;
+}
+.modal__form__check {
+  position: relative;
+  display: flex;
+  padding-left: 20px;
+  flex-direction: row;
+  width: 448px;
+  margin-top: 20px;
+}
+.modal__form__check__label {
+  position: relative;
+  width: 400px;
+  height: 40px;
+  cursor: pointer;
+}
+.modal__form__check__label .custom__check {
+  position: absolute;
+  border-color: #757575;
+  display: inline;
+}
+.modal__form__check__label .custom__check__svg {
+  display: inline;
+  position: absolute;
+  display: none;
+  top: 1px;
+  left: 6px;
+  width: 13px;
+  height: 12px;
+  padding-top: 2px;
+  border: solid #2196F3;
+  background: #2196F3;
+  fill: #FFFFFF;
+}
+.modal__form__check__label .custom__check:hover {
+  background: #2196F3;
+  border: none;
+}
+.modal__form__check__label__text {
+  position: absolute;
+  left: 12px;
+  top: 10px;
+  margin-left: 5px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.modal__form__check__label .input__check {
+  width: 50px;
+}
+.modal__form__send {
+  width: 200px;
+  height: 50px;
+  margin-top: 12px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  border-color: #AFB1B8;
+  outline: none;
+  cursor: pointer;
+}
+.modal__form__send .letter__send {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal__form__send .letter__send:hover {
+  color: #FFFFFF;
+}
+.modal__form__send:hover, .modal__form__send:focus {
+  background-color: #2196F3;
+  border-color: #2196F3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.quality {
+  width: 100vw;
+  height: 350PX;
+  background: #E5E5E5;
+}
+.quality__box1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 82PX;
+  gap: 30px;
+  background: #F5F4FA;
+  list-style-type: none;
+}
+.quality__box1__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 270px;
+  margin-bottom: 99px;
+  background: #F5F4FA;
+}
+.quality__box1__svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #E5E5E5;
+}
+.quality__box1__svg .icon__first {
+  width: 75px;
+  height: 70px;
+}
+.quality__box1__title1 {
+  width: 270px;
+  height: 16px;
+  font-family: roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.quality__box1__paragraph1 {
+  width: 270px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
 
 /*# sourceMappingURL=style.css.map */
